# glitterfork

./: .gitignore  .gitmodules  CMakeLists.txt
Glitter/Headers/: Camera.hpp  GlRenderer.hpp  Shader.hpp
Glitter/Shaders/: shader.frag  shader.vert
Glitter/Sources/: GlRenderer.cpp  main.cpp
Glitter/src/: Application.cpp  Application.hpp  Camera.cpp  Camera.hpp  CollisionSystem.cpp  CollisionSystem.hpp  JPhysicsSystem.cpp  JPhysicsSystem.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  Renderable.cpp  Renderable.hpp  RendererGl.cpp  RendererGl.hpp  Shader.cpp  Shader.hpp  Transform.cpp  Transform.hpp  bPhysicsCustomMotionState.hpp  bPhysicsSystem.cpp  bPhysicsSystem.hpp  config.hpp  main.cpp  slib.cpp  slib.hpp
resources/: cube_steve.mtl  turret.mtl
